--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "author": "zhang",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^2.2.0"
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0",
+    "json-loader": "^0.5.4",
+    "babel-core": "^6.13.2"
   }
 }
