--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "json-loader": "^0.5.4",
-    "babel-core": "^6.13.2"
+    "babel-core": "^6.13.2",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-loader": "^6.2.10"
   }
 }
