--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "json-loader": "^0.5.4",
     "babel-core": "^6.13.2",
     "babel-preset-es2015": "^6.13.2",
-    "babel-loader": "^6.2.10"
+    "babel-loader": "^6.2.10",
+    "css-loader": "~0.25.0",
+    "style-loader": "~0.13.0"
   }
 }
